--- a/src/styles.css
+++ b/src/styles.css
@@ -666,6 +666,10 @@ mark {
     padding-bottom: 50px;
     padding-top: 50px;
 }
+#pagetoshow {
+    padding-bottom: 50px;
+    padding-top: 50px;
+}
 .bg-blue-light {
     background: #eaf1f6;
 }
@@ -868,6 +872,7 @@ mark {
     #sendSmsBtn,
     footer,
     #page-toshow,
+    #pagetoshow,
     .container-fluid.pb-60 {
         display: none !important;
     }
