--- a/src/app/emailmanagement/emailmanagement.component.html
+++ b/src/app/emailmanagement/emailmanagement.component.html
@@ -328,6 +328,25 @@
                             <mat-form-field class="example-full-width">
                                 <input type="text" matInput formControlName="RelevantEmployee1">
                             </mat-form-field>
+                            <!-- <mat-form-field class="example-chip-list" appearance="fill">
+                                <mat-label>שם עובד</mat-label>
+                                <mat-chip-list #chipList aria-label="Fruit selection">
+                                    <mat-chip *ngFor="let fruit of fruits" [selectable]="selectable" [removable]="removable"
+                                        (removed)="remove(fruit)">
+                                        {{fruit.firstname}}
+                                        <mat-icon matChipRemove>cancel</mat-icon>
+                                    </mat-chip>
+                                    <input placeholder="שם עובד" #fruitInput [formControl]="fruitCtrl"
+                                        [matAutocomplete]="auto" [matChipInputFor]="chipList"
+                                        [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
+                                        (matChipInputTokenEnd)="add($event)">
+                                </mat-chip-list>
+                                <mat-autocomplete #auto="matAutocomplete" (optionSelected)="selected($event)">
+                                    <mat-option *ngFor="let fruit of filteredFruits | async" [value]="fruit">
+                                        {{fruit.firstname}}
+                                    </mat-option>
+                                </mat-autocomplete>
+                            </mat-form-field> -->
                         </li>
                         <li class="border-me col-6">
                             <div class="col-12 text-right">
