--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -55,7 +55,7 @@
             <thead>
                 <tr>
                     <th>מחלקה</th>
-                    <th>מיטות</th>
+                    <th>מיטות בפועל</th>
                     <th>תפוסה</th>
                     <th>אחוז תפוסה</th>
                 </tr>
