--- a/src/app/consultations/consultations.component.html
+++ b/src/app/consultations/consultations.component.html
@@ -113,6 +113,22 @@
                                     </mat-form-field>
                                 </div>
                             </div>
+                            <div class="col">
+                                <div class="form-group">
+                                    <mat-form-field>
+                                        <mat-label>סוג יעוץ</mat-label>
+                                        <mat-select
+                                            name="typeOf"
+                                            [(value)]="typeOf"
+                                            required
+                                        >
+                                            <mat-option [value]="-1">הכל</mat-option>
+                                            <mat-option [value]="1">אישפוז</mat-option>
+                                            <mat-option [value]="3">אבולטורי</mat-option>
+                                        </mat-select>
+                                    </mat-form-field>
+                                </div>
+                            </div>
                         </div>
                         <div class="row">
                             <div dir="rtl" class="col-md-12 text-right">
