--- a/src/app/nurses-manage-dashboard/nurses-manage-dashboard.component.html
+++ b/src/app/nurses-manage-dashboard/nurses-manage-dashboard.component.html
@@ -339,7 +339,7 @@
                         {{reply.FirstName}} {{reply.LastName}} - {{reply.MessageDate}} {{reply.MessageTime}}
                     </div>
                     <div class="row">
-                        <p class="text-right" style="font-family: 'math';font-weight: bolder;font-size: 18px;">
+                        <p class="text-right" style="font-weight: bolder;font-size: 18px;">
                             {{reply.ResponseText}}</p>
                     </div>
                 </div>
