--- a/src/app/fill-report/fill-report.component.html
+++ b/src/app/fill-report/fill-report.component.html
@@ -54,7 +54,7 @@
             <div class="col-12">
                 <mat-form-field class="example-full-width" appearance="fill">
                     <mat-label>אבחנה</mat-label>
-                    <textarea matInput style="font-family: 'math';font-weight: bolder;font-size: 18px;"
+                    <textarea matInput style="font-weight: bolder;font-size: 18px;"
                         formControlName="Diagnosis" placeholder="אבחנה"></textarea>
                 </mat-form-field>
             </div>
@@ -65,11 +65,11 @@
                     <mat-form-field>
                         <mat-label>נושא/מחלקה</mat-label>
                         <input type="text" aria-label="department"
-                            style="font-family: 'math';font-weight: bolder;font-size: 18px;" matInput
+                            style="font-weight: bolder;font-size: 18px;" matInput
                             [formControl]="departmentfilter" [matAutocomplete]="auto2">
                         <mat-autocomplete #auto2="matAutocomplete">
                             <mat-option *ngFor="let dept of filteredOptions2 | async" [value]="dept.Dept_Name"
-                                style="font-family: 'math';font-weight: bolder;font-size: 18px;">
+                                style="font-weight: bolder;font-size: 18px;">
                                 {{dept.Dept_Name}}
                             </mat-option>
                         </mat-autocomplete>
@@ -81,11 +81,11 @@
                     <mat-form-field>
                         <mat-label>קטגוריה</mat-label>
                         <input type="text" aria-label="category"
-                            style="font-family: 'math';font-weight: bolder;font-size: 18px;" matInput
+                            style="font-weight: bolder;font-size: 18px;" matInput
                             [formControl]="categoryfilter" [matAutocomplete]="auto3">
                         <mat-autocomplete #auto3="matAutocomplete">
                             <mat-option *ngFor="let cat of filteredOptions3 | async" [value]="cat.Cat_Name"
-                                style="font-family: 'math';font-weight: bolder;font-size: 18px;">
+                                style="font-weight: bolder;font-size: 18px;">
                                 {{cat.Cat_Name}}
                             </mat-option>
                         </mat-autocomplete>
@@ -96,11 +96,11 @@
                 <div class="form-group">
                     <mat-form-field>
                         <mat-label>תת קטגוריה</mat-label>
-                        <input type="text" aria-label="subcategory" style="font-family: 'math';font-weight: bolder;font-size: 18px;" matInput
+                        <input type="text" aria-label="subcategory" style="font-weight: bolder;font-size: 18px;" matInput
                             [formControl]="subcategoryfilter" [matAutocomplete]="auto4">
                         <mat-autocomplete #auto4="matAutocomplete">
                             <mat-option *ngFor="let subcat of filteredOptions4 | async" [value]="subcat.SubCat_Name"
-                                style="font-family: 'math';font-weight: bolder;font-size: 18px;">
+                                style="font-weight: bolder;font-size: 18px;">
                                 {{subcat.SubCat_Name}}
                             </mat-option>
                         </mat-autocomplete>
@@ -112,48 +112,49 @@
                     <mat-form-field>
                         <mat-label>סטטוס</mat-label>
                         <mat-select formControlName="ReportStatus" #mySelect (selectionChange)='autoDate($event)'
-                            style="font-family: 'math';font-weight: bolder;font-size: 18px;">
+                            style="font-weight: bolder;font-size: 18px;">
                             <mat-option *ngFor="let st of status" [value]="st.value"
-                                style="font-family: 'math';font-weight: bolder;font-size: 18px;">
+                                style="font-weight: bolder;font-size: 18px;">
                                 {{st.viewValue}} </mat-option>
                         </mat-select>
                     </mat-form-field>
                 </div>
             </div>
             <div class="col-1 text-center">
-                <button [disabled]="!creator" (click)="setImportantReport()" matTooltip="סמן כחשוב"><span class="material-icons"
-                    [style.color]="ReportGroup.controls['Important'].value == 'True' ? 'red': 'grey'"
-                     id="importantIcon">
-                    notification_important
-                </span></button>
-                
+                <button [disabled]="!creator" (click)="setImportantReport()" matTooltip="סמן כחשוב"><span
+                        class="material-icons"
+                        [style.color]="ReportGroup.controls['Important'].value == 'True' ? 'red': 'grey'"
+                        id="importantIcon">
+                        notification_important
+                    </span></button>
+
             </div>
             <div class="col" style="align-self: center;">
                 <section class="example-section">
                     <mat-checkbox class="example-margin" formControlName="toContinue"
                         (change)="autoDate($event.checked)"
-                        style="font-family: 'math';font-weight: bolder;font-size: 18px;">דורש
+                        style="font-weight: bolder;font-size: 18px;">דורש
                         המשך טיפול</mat-checkbox>
                 </section>
             </div>
         </div>
         <div class="row">
-            <div class="col-3">
+            <div class="col-2">
                 <div class="form-group">
                     <mat-form-field>
                         <mat-label>משמרת</mat-label>
-                        <b style="font-size: 26px;font-family: 'math';font-weight: bolder;font-size: 18px;">
+                        <b style="font-size: 26px;font-weight: bolder;font-size: 18px;">
                             <input matInput class="form-control" formControlName="ReportShift" type="text" />
                         </b>
                     </mat-form-field>
 
                 </div>
             </div>
-            <div class="col-9">
+            <div class="col-10">
                 <div class="form-group">
                     <mat-form-field>
-                        <textarea matInput rows="3"
-                            style="font-size: 15px;font-family: 'math';font-weight: bolder;font-size: 18px;"
+                        <textarea matInput rows="5"
+                            style="font-weight: bolder;font-size: 22px;"
                             placeholder="תוכן הדוח" class="form-control border-1"
                             formControlName="ReportText"></textarea>
                     </mat-form-field>
@@ -184,19 +185,13 @@
                                     </div>
                                 </div>
                                 <br>
-                                <p class="text-right" style="font-family: 'math';font-weight: bolder;font-size: 18px;">
+                                <p class="text-right" style="font-weight: bolder;font-size: 18px;">
                                     {{response.ResponseText}}</p>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <!-- <div class="col-1">
-                <button mat-mini-fab matTooltip="הוספת תגובה" id="addReply" (click)="addResponseToReport(reportID)"
-                    color="primary">
-                    <mat-icon>add</mat-icon>
-                </button>
-            </div> -->
         </div>
     </div>
     <!-- <div class="modal-footer text-left" *ngIf="creator || reportID == '0';else note">
@@ -271,7 +266,7 @@
                         {{reply.FirstName}} {{reply.LastName}} - {{reply.UpdateDate}}
                     </div>
                     <div class="row">
-                        <p class="text-right" style="font-family: 'math';font-weight: bolder;font-size: 18px;">
+                        <p class="text-right" style="font-weight: bolder;font-size: 18px;">
                             {{reply.ResponseText}}</p>
                     </div>
                 </div>
