--- a/src/app/nurses-dashboard/nurses-dashboard.component.html
+++ b/src/app/nurses-dashboard/nurses-dashboard.component.html
@@ -3,6 +3,8 @@
         <button type="button" class="close" matTooltip="סגירה" aria-label="Close" (click)="closeModal()">
             <span>&times;</span>
         </button>
+        <h3 *ngIf="reportType == 'administrative'">דווח מינהלי</h3>
+        <h3 *ngIf="reportType == 'clinical'">דווח קליני</h3>
         <div class="container-fluid trans-80 mb-2">
             <div class="row search-cont">
                 <div class="col">
@@ -84,10 +86,11 @@
                                     <div [ngClass]="reportType == 'administrative' ? 'col-4' : 'col-6'">
                                         <div class="form-group">
                                             <mat-form-field>
-                                                <input matInput formControlName="ReportStartDate" (focus)="startdate.open()"
-                                                    autocomplete="off" placeholder="מ תאריך" name="startdate"
-                                                    [matDatepicker]="startdate" />
-                                                <mat-datepicker-toggle matSuffix [for]="startdate"></mat-datepicker-toggle>
+                                                <input matInput formControlName="ReportStartDate"
+                                                    (focus)="startdate.open()" autocomplete="off" placeholder="מ תאריך"
+                                                    name="startdate" [matDatepicker]="startdate" />
+                                                <mat-datepicker-toggle matSuffix [for]="startdate">
+                                                </mat-datepicker-toggle>
                                                 <mat-datepicker #startdate></mat-datepicker>
                                             </mat-form-field>
                                         </div>
@@ -98,7 +101,8 @@
                                                 <input matInput formControlName="ReportEndDate" (focus)="enddate.open()"
                                                     autocomplete="off" placeholder="עד תאריך " required name="enddate"
                                                     [matDatepicker]="enddate" />
-                                                <mat-datepicker-toggle matSuffix [for]="enddate"></mat-datepicker-toggle>
+                                                <mat-datepicker-toggle matSuffix [for]="enddate">
+                                                </mat-datepicker-toggle>
                                                 <mat-datepicker #enddate></mat-datepicker>
                                             </mat-form-field>
                                         </div>
@@ -143,9 +147,13 @@
                     </div>
                 </div>
             </div>
+            <mat-progress-bar mode="buffer" id="buffer" *ngIf="Patientsloading"></mat-progress-bar>
         </div>
     </div>
 
+    <div dir="rtl" class="row reportHeader" *ngIf="asDialog">
+        <h5>סה"כ מספר דיווחים: {{ELEMENT_DATA.length}}</h5>
+    </div>
     <div dir="rtl" class="row reportHeader" *ngIf="asDialog">
         <h1>{{Dept_Name}}</h1>
     </div>
@@ -307,7 +315,7 @@
                         save
                     </span>
                 </button>
-                <br><br><br>
+                <br><br><br>                
                 <!-- <button *ngIf="reportID != '0'" matTooltip="מחיקה" id="BtnStyle" type="button" mat-raised-button
                     class="btn btn-outline-dark ml-3" color="warn" (click)="deleteReport(reportID)">
                     <span class="material-icons">
@@ -316,13 +324,232 @@
                 </button> -->
             </div>
         </form>
-        <app-fill-report *ngFor="let item of currentItemsToShow" style="font-size: small;" [reportID]="item.reportID"
-            [userFullName]="item.userFullName" [ifGeneral]="ifGeneral"></app-fill-report>
+        <mat-accordion *ngIf="reportType == 'clinical'" class="example-headers-align" multi>
+            <mat-expansion-panel *ngFor="let patient of differentReports" (opened)="panelOpenState = true"
+                (closed)="panelOpenState = false">
+                <mat-expansion-panel-header>
+                    <mat-panel-title>
+                        {{patient[0].Patient_DobGender}}
+                    </mat-panel-title>
+                    <mat-panel-description>
+                        {{patient[0].PatientName}}
+                        <mat-icon>account_circle</mat-icon>
+                    </mat-panel-description>
+                </mat-expansion-panel-header>
+                <!-- <form dir="rtl" class="form col" id="formBody" *ngFor="let report of patient"
+                    [style.background]="AdminNurse == '1' ? 'floralwhite':  'aliceblue'">
+                    <div class="modal-header text-right">
+                        <div class="row mt-3">
+                            <div class="col-4">
+                                <span>{{date2}} - {{time2}}</span> <br><span>{{userFullName}}</span>
+                            </div>
+                            <div class="col-5">
+                                <span style="font-size: 20px;"
+                                    *ngIf="report.ReportType == 'clinical'">{{report.PatientName}} </span>
+                                <span *ngIf="report.reportType == 'clinical'" style="font-size: 14px;float: left;">
+                                    {{report.Patient_DobGender}}</span><br> <span
+                                    *ngIf="report.reportType == 'clinical'">{{report.PatientNurseStatus}}</span>
+                            </div>
+                            <div class="col-3">
+                                <button mat-icon-button style="float: left;" [matMenuTriggerFor]="menu"
+                                    aria-label="Example icon-button with a menu">
+                                    <mat-icon>more_vert</mat-icon>
+                                </button>
+                                <mat-menu #menu="matMenu" style="background: floralwhite;">
+                                    <button class="menuBtns" mat-menu-item (click)="openShareDialog()">שליחה
+                                        לנמען
+                                        <span class="material-icons">
+                                            reply
+                                        </span>
+                                    </button>
+                                    <button class="menuBtns" mat-menu-item (click)="printSingleReport()">הדפסת דווח
+                                        <span class="material-icons">
+                                            print
+                                        </span>
+                                    </button>
+                                    <button mat-menu-item [disabled]="!creator" class="menuBtns"
+                                        (click)="onSubmit()">שמירה
+                                        <span class="material-icons">
+                                            save
+                                        </span>
+                                    </button>
+                                    <button mat-menu-item class="menuBtns" (click)="addResponseToReport(reportID)">הוספת
+                                        תגובה
+                                        <span class="material-icons">
+                                            add
+                                        </span>
+                                    </button>
+                                    <button [disabled]="!creator" class="menuBtns" style="background: orangered;"
+                                        mat-menu-item (click)="areYouSureDeleteReport(reportID)">מחיקת דיווח
+                                        <span class="material-icons">
+                                            delete
+                                        </span>
+                                    </button>
+                                </mat-menu>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="modal-body">
+                        <div class="row" *ngIf="report.ReportType == 'clinical'">
+                            <div class="col-12">
+                                <mat-form-field class="example-full-width" appearance="fill">
+                                    <mat-label>אבחנה</mat-label>
+                                    <textarea matInput style="font-weight: bolder;font-size: 18px;"
+                                        value="{{report.Diagnosis}}" placeholder="אבחנה"></textarea>
+                                </mat-form-field>
+                            </div>
+                        </div>
+                        <div class="row" *ngIf="report.ReportType == 'administrative'">
+                            <div class="col">
+                                <div class="form-group">
+                                    <mat-form-field>
+                                        <mat-label>נושא/מחלקה</mat-label>
+                                        <input type="text" aria-label="department"
+                                            style="font-weight: bolder;font-size: 18px;" matInput
+                                            value="{{report.ReportMachlol}}">
+                                        <input type="text" aria-label="department"
+                                            style="font-weight: bolder;font-size: 18px;" matInput
+                                            [formControl]="departmentfilter" [matAutocomplete]="auto2">
+                                        <mat-autocomplete #auto2="matAutocomplete">
+                                            <mat-option *ngFor="let dept of filteredOptions2 | async"
+                                                [value]="dept.Dept_Name"
+                                                style="font-weight: bolder;font-size: 18px;">
+                                                {{dept.Dept_Name}}
+                                            </mat-option>
+                                        </mat-autocomplete>
+                                    </mat-form-field>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="form-group">
+                                    <mat-form-field>
+                                        <mat-label>קטגוריה</mat-label>
+                                        <input type="text" aria-label="category"
+                                            style="font-weight: bolder;font-size: 18px;" matInput
+                                            value="{{report.ReportCategory}}">
+                                        <input type="text" aria-label="category"
+                                            style="font-weight: bolder;font-size: 18px;" matInput
+                                            [formControl]="categoryfilter" [matAutocomplete]="auto3">
+                                        <mat-autocomplete #auto3="matAutocomplete">
+                                            <mat-option *ngFor="let cat of filteredOptions3 | async"
+                                                [value]="cat.Cat_Name"
+                                                style="font-weight: bolder;font-size: 18px;">
+                                                {{cat.Cat_Name}}
+                                            </mat-option>
+                                        </mat-autocomplete>
+                                    </mat-form-field>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="form-group">
+                                    <mat-form-field>
+                                        <mat-label>סטטוס</mat-label>
+                                        <mat-select value="{{report.ReportStatus}}" #mySelect
+                                            (selectionChange)='autoDate($event)'
+                                            style="font-weight: bolder;font-size: 18px;">
+                                            <mat-option *ngFor="let st of status" [value]="st.value"
+                                                style="font-weight: bolder;font-size: 18px;">
+                                                {{st.viewValue}} </mat-option>
+                                        </mat-select>
+                                    </mat-form-field>
+                                </div>
+                            </div>
+                            <div class="col-1 text-center">
+                                <button [disabled]="!creator" (click)="setImportantReport()"
+                                    matTooltip="סמן כחשוב"><span class="material-icons"
+                                        [style.color]="report.Important == 'True' ? 'red': 'grey'"
+                                        id="importantIcon">
+                                        notification_important
+                                    </span></button>
+
+                            </div>
+                            <div class="col" style="align-self: center;">
+                                <section class="example-section">
+                                    <mat-checkbox class="example-margin" value="{{report.toContinue}}"
+                                        (change)="autoDate($event.checked)"
+                                        style="font-weight: bolder;font-size: 18px;">דורש
+                                        המשך טיפול</mat-checkbox>
+                                </section>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-3">
+                                <div class="form-group">
+                                    <mat-form-field>
+                                        <mat-label>משמרת</mat-label>
+                                        <b
+                                            style="font-size: 26px;font-weight: bolder;font-size: 18px;">
+                                            <input matInput class="form-control" value="{{report.ReportShift}}"
+                                                type="text" />
+                                        </b>
+                                    </mat-form-field>
+
+                                </div>
+                            </div>
+                            <div class="col-9">
+                                <div class="form-group">
+                                    <mat-form-field>
+                                        <textarea matInput rows="3"
+                                            style="font-size: 15px;font-weight: bolder;font-size: 18px;"
+                                            placeholder="תוכן הדוח" class="form-control border-1"
+                                            value="{{report.ReportText}}"></textarea>
+                                    </mat-form-field>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                        <div class="col-12">
+                            <h5>תגובות:</h5>
+                            <div class="expantionBox" *ngIf="usersReponsesList?.length > 0">
+                                <div class="mat-accordion">
+                                    <div *ngFor="let response of usersReponsesList">
+                                        <div class="reply-row" *ngIf="response.FirstName != ''">
+                                            <div class="row mt-2">
+                                                <div class="col-10">
+                                                    <h6>
+                                                        {{response.FirstName}} {{response.LastName}}
+                                                        &nbsp;{{response.UpdateDate}}
+                                                    </h6>
+                                                </div>
+                                                <div class="col-2">
+                                                    <button *ngIf="response.UserName == UserName" matTooltip="מחיקה"
+                                                        type="button" id="BtnStyle" mat-raised-button
+                                                        class="btn btn-outline-dark" color="warn"
+                                                        (click)="deleteReply(response.ResponseRowID)">
+                                                        <span class="material-icons">
+                                                            delete
+                                                        </span>
+                                                    </button>
+                                                </div>
+                                            </div>
+                                            <br>
+                                            <p class="text-right"
+                                                style="font-weight: bolder;font-size: 18px;">
+                                                {{response.ResponseText}}</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    </div>
+                </form> -->
+                <app-fill-report *ngFor="let item of patient" style="font-size: small;" [reportID]="item.Row_ID"
+                    [userFullName]="item.userFullName" [ifGeneral]="ifGeneral"></app-fill-report>
+                <hr>
+            </mat-expansion-panel>
+
+        </mat-accordion>
+        <div *ngIf="reportType == 'administrative'">
+            <app-fill-report *ngFor="let item of currentItemsToShow" style="font-size: small;" [reportID]="item.Row_ID"
+                [userFullName]="item.userFullName" [ifGeneral]="ifGeneral"></app-fill-report>
+        </div>
+
         <span class="material-icons" matTooltip="לראש העמוד" id="takeMeToTheTop" (click)="takeMeToTheTop()">
             upgrade
         </span>
-        <mat-paginator (page)="onPageChange($event)" [length]="ELEMENT_DATA.length" [pageSize]="5"
-            [pageSizeOptions]="[5, 10, 25, 100]">
+        <mat-paginator (page)="onPageChange($event)" [length]="ELEMENT_DATA.length" [pageSize]="15"
+            [pageSizeOptions]="[15, 25, 50, 100]">
         </mat-paginator>
     </div>
 </div>
@@ -384,7 +611,7 @@
                         {{reply.FirstName}} {{reply.LastName}} - {{reply.MessageDate}} {{reply.MessageTime}}
                     </div>
                     <div class="row">
-                        <p class="text-right" style="font-family: 'math';font-weight: bolder;font-size: 18px;">
+                        <p class="text-right" style="font-weight: bolder;font-size: 18px;">
                             {{reply.ResponseText}}</p>
                     </div>
                 </div>
