--- a/src/app/nurses-dashboard/nurses-dashboard.component.html
+++ b/src/app/nurses-dashboard/nurses-dashboard.component.html
@@ -332,7 +332,7 @@
                         {{patient[0].Patient_DobGender}}
                     </mat-panel-title>
                     <mat-panel-description>
-                        {{patient[0].PatientName}}
+                        <span style="font-size: 22px;font-weight: bold;">{{patient[0].PatientName}}</span>
                         <mat-icon>account_circle</mat-icon>
                     </mat-panel-description>
                 </mat-expansion-panel-header>
