--- a/src/app/fill-report/fill-report.component.html
+++ b/src/app/fill-report/fill-report.component.html
@@ -6,9 +6,9 @@
                 <span>{{date2}} - {{time2}}</span> <br><span>{{userFullName}}</span>
             </div>
             <div class="col-5">
-                <span style="font-size: 20px;"
+                <span style="font-size: 22px;font-weight: bold;"
                     *ngIf="reportType == 'clinical'">{{ReportGroup.controls['PatientName'].value}} </span> <span
-                    *ngIf="reportType == 'clinical'" style="font-size: 14px;float: left;">
+                    *ngIf="reportType == 'clinical'" style="font-size: 20px;float: left;">
                     {{ReportGroup.controls['Patient_DobGender'].value}}</span><br> <span
                     *ngIf="reportType == 'clinical'">{{ReportGroup.controls['PatientNurseStatus'].value}}</span>
             </div>
@@ -54,7 +54,7 @@
             <div class="col-12">
                 <mat-form-field class="example-full-width" appearance="fill">
                     <mat-label>אבחנה</mat-label>
-                    <textarea matInput style="font-weight: bolder;font-size: 18px;"
+                    <textarea matInput style="font-weight: bolder;font-size: 22px;"
                         formControlName="Diagnosis" placeholder="אבחנה"></textarea>
                 </mat-form-field>
             </div>
@@ -65,11 +65,11 @@
                     <mat-form-field>
                         <mat-label>נושא/מחלקה</mat-label>
                         <input type="text" aria-label="department"
-                            style="font-weight: bolder;font-size: 18px;" matInput
+                            style="font-weight: bolder;font-size: 22px;" matInput
                             [formControl]="departmentfilter" [matAutocomplete]="auto2">
                         <mat-autocomplete #auto2="matAutocomplete">
                             <mat-option *ngFor="let dept of filteredOptions2 | async" [value]="dept.Dept_Name"
-                                style="font-weight: bolder;font-size: 18px;">
+                                style="font-weight: bolder;font-size: 22px;">
                                 {{dept.Dept_Name}}
                             </mat-option>
                         </mat-autocomplete>
@@ -81,11 +81,11 @@
                     <mat-form-field>
                         <mat-label>קטגוריה</mat-label>
                         <input type="text" aria-label="category"
-                            style="font-weight: bolder;font-size: 18px;" matInput
+                            style="font-weight: bolder;font-size: 22px;" matInput
                             [formControl]="categoryfilter" [matAutocomplete]="auto3">
                         <mat-autocomplete #auto3="matAutocomplete">
                             <mat-option *ngFor="let cat of filteredOptions3 | async" [value]="cat.Cat_Name"
-                                style="font-weight: bolder;font-size: 18px;">
+                                style="font-weight: bolder;font-size: 22px;">
                                 {{cat.Cat_Name}}
                             </mat-option>
                         </mat-autocomplete>
@@ -112,9 +112,9 @@
                     <mat-form-field>
                         <mat-label>סטטוס</mat-label>
                         <mat-select formControlName="ReportStatus" #mySelect (selectionChange)='autoDate($event)'
-                            style="font-weight: bolder;font-size: 18px;">
+                            style="font-weight: bolder;font-size: 22px;">
                             <mat-option *ngFor="let st of status" [value]="st.value"
-                                style="font-weight: bolder;font-size: 18px;">
+                                style="font-weight: bolder;font-size: 22px;">
                                 {{st.viewValue}} </mat-option>
                         </mat-select>
                     </mat-form-field>
@@ -143,7 +143,7 @@
                 <div class="form-group">
                     <mat-form-field>
                         <mat-label>משמרת</mat-label>
-                        <b style="font-size: 26px;font-weight: bolder;font-size: 18px;">
+                        <b style="font-size: 22px;font-weight: bolder">
                             <input matInput class="form-control" formControlName="ReportShift" type="text" />
                         </b>
                     </mat-form-field>
