--- a/src/app/fill-report/fill-report.component.html
+++ b/src/app/fill-report/fill-report.component.html
@@ -54,7 +54,7 @@
             <div class="col-12">
                 <mat-form-field class="example-full-width" appearance="fill">
                     <mat-label>אבחנה</mat-label>
-                    <textarea matInput style="font-weight: bolder;font-size: 22px;"
+                    <textarea matInput rows="3" style="font-weight: bolder;font-size: 22px;"
                         formControlName="Diagnosis" placeholder="אבחנה"></textarea>
                 </mat-form-field>
             </div>
