--- a/src/app/fill-survey/fill-survey.component.html
+++ b/src/app/fill-survey/fill-survey.component.html
@@ -22,7 +22,7 @@
       </div>
     </div>
 
-    <button mat-raised-button type="submit" (click)="searchCaseNumber()" class="btn btn-primary btn-raised mb-2"
+    <button mat-raised-button ml-2 type="submit" (click)="searchCaseNumber()" class="btn btn-primary btn-raised mb-2"
       matTooltip="חפש">
       <span class="material-icons">
         done
