--- a/src/app/nurses-manage-dashboard/other-departments/other-departments.component.css
+++ b/src/app/nurses-manage-dashboard/other-departments/other-departments.component.css
@@ -12,6 +12,13 @@
   border-radius: 30%;
   cursor: pointer;
 }
+.mat-row:nth-child(even){
+  background-color: floralwhite;
+}
+ 
+.mat-row:nth-child(odd){
+  background-color: aliceblue;
+}
 
 @media only screen and (min-width: 1050px) {
 
